# AOA

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: guide.md
src/AOA/: app.py  cli.py
src/AOA/core/: constants.py  data_generation.py  features.py  models.py  scheduling.py  services.py  sto_models.py  tabpfn_models.py
src/AOA/gui/pages/: main_page.py
tests/cli/: test_cli_commands.py  test_cli_interactive.py  test_cli_main.py  test_cli_workflow.py
tests/core/: test_data_generation_extended.py  test_dataset_ops.py  test_evaluation.py  test_features_extended.py  test_io_and_split_extended.py  test_model_pack_flows.py  test_models.py  test_models_extended.py  test_scheduling_extended.py  test_services_extended.py  test_services_extra.py  test_services_flows.py  test_sto_models.py  test_sto_models_extended.py  test_tabpfn_models.py  test_visualization_service.py  test_visualization_service_extended.py
